Updating .env.template, adding ability to write to the DB in addition to CSV output, update README, added very basic logging, updated requirements

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,13 @@
-OUT_FILE_PATH='.'
-OUT_FILE_NAME='test,csv'
-DB_USER='rental-listing-aggregator'
-DB_PASSWORD='password'
-DB_HOST='127.0.0.1'
+MAPPER_YEAR=2020
+MAPPER_MONTH=1
+#MAPPER_QUARTER=1
+
+OUT_FILE_PATH=./output/
+OUT_FILE_NAME=mapped.csv
+OUT_TABLE_NAME=mapped
+
+DB_USER=rental-listing-aggregator
+DB_PASSWORD=password
+DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_NAME='rental-listing-aggregator'
-MAPPER_MONTH='6'
+DB_NAME=rental-listing-aggregator
