--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-numpy==1.19.0
-pandas==1.0.5
-psycopg2==2.8.5
-python-dateutil==2.8.1
-python-dotenv==0.13.0
-pytz==2020.1
-six==1.15.0
-SQLAlchemy==1.3.18
+numpy==1.24.4
+pandas==2.0.3
+psycopg2==2.9.9
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+six==1.16.0
+SQLAlchemy==2.0.23
+typing_extensions==4.9.0
+tzdata==2023.3
